--- a/WebContent/css/Bftheme.css
+++ b/WebContent/css/Bftheme.css
@@ -166,7 +166,7 @@ a{
 
 .profile_info{
     padding: 0px 10px 10px;
-    width: 65%;
+    width: 35%;
     float: left;
     box-sizing: border-box;
     display: block;
@@ -179,7 +179,7 @@ a{
 
     font-size: 13px;
     line-height: 30px;
-    color: #23527c;
+    color: #ECF0F1;
 }
 .profile_info h2{
 
@@ -196,12 +196,24 @@ a{
 }
 .profile_pic{
 
-    width: 35%;
+    width: 30%;
     float: left;
     box-sizing: border-box;
 
 }
+#changerole{
+    width: 30%;
+    float: left;
+    margin-top: 6px;
 
+}
+.view_detail{
+    float: right;
+}
+#applytree{
+    width: 50%;
+    position: relative;
+}
 .img-circle.profile_img{
 
     width: 70%;
@@ -485,7 +497,7 @@ iframe{
     border-style: none;
 }
 footer{
-    width: 100%;
+
     margin-left: 230px;
     margin-bottom: 0px;
     background-color: #fff;
@@ -520,7 +532,7 @@ footer>div{
 }
 .btn{
     display: inline-block;
-    padding: 6px 12px;
+    padding: 2px;
     margin-bottom: 0;
     font-size: 14px;
     font-weight: 400;
