--- a/WebContent/css/Bftheme.css
+++ b/WebContent/css/Bftheme.css
@@ -166,8 +166,8 @@ a{
 
 .profile_info{
     padding: 0px 10px 10px;
-    width: 35%;
-    float: left;
+    width: 55%;
+    float: right;
     box-sizing: border-box;
     display: block;
     font-family: "Helvetica Neue",Roboto,Arial,"Droid Sans",sans-serif;
@@ -196,14 +196,15 @@ a{
 }
 .profile_pic{
 
-    width: 30%;
+    width: 10%;
     float: left;
     box-sizing: border-box;
 
 }
 #changerole{
     width: 30%;
-    float: left;
+    float: right;
+    margin-right: 20px;
     margin-top: 6px;
 
 }
@@ -491,6 +492,11 @@ ul.msg_list li a .image img {
 .input-group{
     float: right;
 }
+.operation>a{
+    margin: 10px;
+    color: #00a3f5;
+}
+
 iframe{
     width: 100%;
     height: 600px;
@@ -570,17 +576,7 @@ footer>div{
     boder-radius:30px;
     float:right;
 }
-.clearfix:before{
-    display: table;
-    content: " ";
- }
- .clearfix:after{
-    content: ".";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden;
- }
+
  .x_title {
     border-bottom: 2px solid #E6E9ED;
     padding: 1px 5px 6px;
@@ -601,6 +597,12 @@ footer>div{
     float: left;
     display: block;
 }
+.x_title h3 {
+    margin: 5px 0 6px;
+    float: left;
+    display: block;
+}
+
 .x_title small{
      font-weight: normal;
 }
@@ -615,6 +617,12 @@ footer>div{
 .panel.panel-primary{
     width: 100%;
     position: relative;
+}
+.span-inline{
+    float: left;
+}
+.title_inline{
+   float: left;
 }
 table.dataTable thead .sorting_asc:after {
     content: "\e155";
