--- a/WebContent/css/Bftheme.css
+++ b/WebContent/css/Bftheme.css
@@ -252,8 +252,12 @@ a{
 .nav.child_menu{
 
     display: block;
-
-
+}
+#parameterTable{
+  width: 380px;
+}
+.parameterName,.parameterSymbol{
+    width: 185px;
 }
 .nav.child_menu>li>a, .nav.side-menu>li>a {
     color: #E7E7E7;
