--- a/WebContent/css/bootstrap.css
+++ b/WebContent/css/bootstrap.css
@@ -4691,14 +4691,26 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   color: #444;
 }
 .breadcrumb {
-  padding: 8px 15px;
-  margin-bottom: 20px;
+  padding-top: 8px;
+  padding-left: 0px;
+  margin-bottom: 8px;
   list-style: none;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   border-radius: 4px;
 }
 .breadcrumb > li {
   display: inline-block;
+
+
+}
+.breadcrumb>li>a{
+  font-size: 18px;
+  font-weight: 400;
+  margin: 5px 0 6px;
+
+}
+.breadcrumb>li>a>i{
+  margin-right: 5px;
 }
 .breadcrumb > li + li:before {
   padding: 0 5px;
