--- a/WebContent/css/bootstrap.css
+++ b/WebContent/css/bootstrap.css
@@ -2304,6 +2304,7 @@ th {
 }
 .table-bordered {
   border: 1px solid #ddd;
+  font-size: 13px;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > tbody > tr > th,
