--- a/WebContent/css/bootstrap.css
+++ b/WebContent/css/bootstrap.css
@@ -4927,7 +4927,8 @@ a.label:focus {
   min-width: 10px;
   padding: 3px 7px;
   font-size: 12px;
-  font-weight: bold;
+  font-weight: normal;
+  margin-top: 5px;
   line-height: 1;
   color: #fff;
   text-align: center;
