--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -259,17 +259,18 @@ html , body{
     float: left
 }
 .img-circle.profile_img {
-    width: 70%;
+    width: 40px;
     background: #fff;
-    margin-left: 15%;
+    margin-left: 45%;
     z-index: 1000;
     position: inherit;
-    margin-top: 20px;
+    margin-top: 15px;
     border: 1px solid rgba(52, 73, 94, 0.44);
     padding: 4px
 }
 .profile_info {
-    padding: 25px 10px 10px;
+   /* padding: 17px 13px 15px 15px;*/
+    padding: 9.5px;
     width: 65%;
     float: left
 }
@@ -683,7 +684,7 @@ a:focus {
 }
 .top_nav .navbar-right {
     margin: 0;
-    width: 70%;
+  /*  width: 70%;*/
     float: right
 }
 .top_nav .navbar-right li {
