--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -336,6 +336,18 @@ html , body{
         position: static
     }
 }
+.filestyle{
+    float: left;
+    padding: 3px 7px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 80%;
+}
 .nav-md .container.body .col-md-3.left_col {
     min-height: 100%;
     width: 230px;
