--- a/WebContent/css/bootstrap.css
+++ b/WebContent/css/bootstrap.css
@@ -2535,7 +2535,7 @@ input[type="range"] {
 }
 select[multiple],
 select[size] {
-  height: auto;
+  /*height: auto;*/
 }
 input[type="file"]:focus,
 input[type="radio"]:focus,
