--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -350,8 +350,22 @@ html , body{
 }
 .sorting{
     text-align: center;
-
 }
+/*table.dataTable thead .sorting.teacherId_Sort:after{
+    content: "\e150";
+ !*   float: right;
+    position: relative;
+    margin-left: 10px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    opacity: 0.5*!
+}*/
+/*table.dataTable thead .sorting.teacherId_activeSort:after{
+    content: "\e155";
+}
+table.dataTable thead .sorting.teacherId_afterSort:after{
+    content: "\e156";
+}*/
 .nav-md .container.body .col-md-3.left_col {
     min-height: 100%;
     width: 230px;
@@ -1446,11 +1460,14 @@ td.group {
     border-top: 2px solid #A19B9E
 }
 td.details {
-    background-color: #d1cfd0;
+   /* background-color: #d1cfd0;*/
     border: 2px solid #A19B9E
 }
 .example_alt_pagination div.dataTables_info {
     width: 40%
+}
+.table.mb-none{
+    font-size: 13px;
 }
 
 /*paging-numbers-full*/
@@ -1497,6 +1514,15 @@ div.box {
     overflow: auto;
     border: 1px solid #8080FF;
     background-color: #E5E5FF
+}
+
+p {
+   /* background:#fff;*/
+    position: relative;
+    top: -50%;
+   /* padding:10px;*/
+   /* color: #222;
+    font-size: 18px;*/
 }
 ul.msg_list li {
     background: #f7f7f7;
