--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -4398,3 +4398,10 @@ p.deadline{
 p.deadline span {
     color: #2A3F54;
 }
+.showgroupMemberSymbol,.showgroupMemberWeight{
+    width: 120px;
+    height: 38px;
+}
+.showgroupMemberName .select2{
+    width: 120px!important;
+}
