--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1105,7 +1105,7 @@ h2 {
     column-break-inside: avoid;
     opacity: 1;
     transition: all .2s ease;
-    min-height: 610px;
+    min-height: 90%;
 }
 .x_title {
     border-bottom: 2px solid #E6E9ED;
