--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1473,7 +1473,8 @@ td.details {
 
 .calendar-bar{
     position: absolute;
-   width: max-content;
+    width:267px;
+
     z-index: 200;
     border-radius: 4px;
     border: 1px solid #AAA;
@@ -1499,6 +1500,11 @@ td.details {
     background: #bcd8ff;
     boder:1px solid #1364fc;
     color: #04438a;
+}
+.experient{
+    margin-left: 160px;
+    color: #a94442;
+    display: none;
 }
 /*paging-numbers-full*/
 
