--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1506,6 +1506,16 @@ td.details {
     color: #a94442;
     display: none;
 }
+.dataTables_wrapper .dataTables_paginate .paginate_button {
+    box-sizing: border-box;
+    display: inline-block;
+    min-width: 1.5em;
+    padding: 0.5em 1em;
+    margin-left: 2px;
+    text-align: center;
+    text-decoration: none !important;
+    cursor: pointer;
+}
 /*paging-numbers-full*/
 
 /*.paging_full_numbers {
