页面样式修改

--- a/WebContent/css/bootstrap.css
+++ b/WebContent/css/bootstrap.css
@@ -275,6 +275,8 @@ th {
   font-style: normal;
   font-weight: normal;
   line-height: 1;
+  font-size: 130px;
+
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
