--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1516,6 +1516,15 @@ td.details {
     text-decoration: none !important;
     cursor: pointer;
 }
+.revContent{
+    height: 80%;
+    border-radius: 3px;
+    margin-top: 20px;
+}
+.spanTitle{
+    margin-left: 10%;
+}
+
 /*paging-numbers-full*/
 
 /*.paging_full_numbers {
