--- a/WebContent/css/bootstrap.css
+++ b/WebContent/css/bootstrap.css
@@ -1096,7 +1096,7 @@ button,
 select,
 textarea {
   font-family: inherit;
-  font-size: inherit;
+  font-size: 13px;
   line-height: inherit;
 }
 a {
