--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1525,7 +1525,7 @@ td.details {
     margin-left: 10%;
 }
 #showdetail .page-nav{
-    font-weight: 600;
+    font-weight: normal;
     padding: 0 10px 10px;
     font-size: 16px;
     border-bottom: 2px solid #E6E9ED;
