--- a/WebContent/css/bootstrap.css
+++ b/WebContent/css/bootstrap.css
@@ -270,6 +270,7 @@ th {
 .glyphicon {
   position: relative;
   top: 1px;
+  margin-top: 40px;
   display: inline-block;
   font-family: 'Glyphicons Halflings';
   font-style: normal;
