--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1520,13 +1520,13 @@ td.details {
     width:238px;
     height: 50%;
     box-shadow: 0 0 13px #eee;
-    margin-left: 4%;
+    margin-left: 8%;
     margin-right: 20px;
     border-radius: 3px;
-    margin-top: 20px;
+    margin-top: 4%;
 }
 .spanTitle{
-    margin-left: 20%;
+    margin-left: 25%;
     margin-top: 10px;
     font-weight: 700;
 }
@@ -1541,38 +1541,6 @@ td.details {
     border-bottom: 2px solid #E6E9ED;
     line-height: 1em;
 }
-/*paging-numbers-full*/
-
-/*.paging_full_numbers {
-    width: 400px;
-    height: 22px;
-    line-height: 22px
-}
-.paging_full_numbers a:active {
-    outline: none
-}
-.paging_full_numbers a:hover {
-    text-decoration: none
-}
-.paging_full_numbers a.paginate_button,
-.paging_full_numbers a.paginate_active {
-    border: 1px solid #aaa;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    padding: 2px 5px;
-    margin: 0 3px;
-    cursor: pointer
-}
-.paging_full_numbers a.paginate_button {
-    background-color: #ddd
-}
-.paging_full_numbers a.paginate_button:hover {
-    background-color: #ccc;
-    text-decoration: none !important
-}
-.paging_full_numbers a.paginate_active {
-    background-color: #99B3FF
-}*/
 table.display tr.even.row_selected td {
     background-color: #B0BED9
 }
@@ -4481,9 +4449,9 @@ p.deadline span {
     background: #e4b9b9;
 }
 .operation-btn-two{
-    width: 200px;
-    text-align: left!important;
-    padding-left: 41px!important;
+    width: 160px;
+  /*  text-align: left!important;
+    padding-left: 41px!important;*/
 }
 .operation-btn-three{
     width: 200px;
