--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -4458,3 +4458,13 @@ p.deadline span {
     text-align: left!important;
     padding-left: 10px!important;
 }
+.show-all-count{
+    color: #fff;
+    font-size:16px;
+    float: left;
+    margin-right: 25px;
+    padding-bottom: 3px;
+    padding-top: 3px;
+    padding-right: 8px;
+    padding-left: 8px;
+}
