--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -732,7 +732,10 @@ a:focus {
 }
 .top_nav .dropdown-menu li a {
     width: 100%;
-    padding: 12px 20px
+    padding-left: 20px;
+    padding-top: 4px;
+    text-align: center;
+
 }
 .top_nav li a i {
     font-size: 15px
@@ -1006,31 +1009,7 @@ article.media {
 *:after {
     box-sizing: border-box
 }
-/*intergration*/
 
-/*#integration-list {
-    width: 100%;
-    margin: 0 auto;
-    display: table
-}
-#integration-list ul {
-    padding: 0;
-    margin: 20px 0;
-    color: #555
-}
-#integration-list ul>li {
-    list-style: none;
-    border-top: 1px solid #ddd;
-    display: block;
-    padding: 15px;
-    overflow: hidden
-}
-#integration-list ul:last-child {
-    border-bottom: 1px solid #ddd
-}
-#integration-list ul>li:hover {
-    background: #efefef
-}*/
 .expand {
     display: block;
     text-decoration: none;
@@ -1520,7 +1499,7 @@ td.details {
     width:238px;
     height: 50%;
     box-shadow: 0 0 13px #eee;
-    margin-left: 8%;
+    margin-left: 5%;
     margin-right: 20px;
     border-radius: 3px;
     margin-top: 4%;
@@ -1627,7 +1606,6 @@ ul.msg_list li a .message {
     -webkit-box-shadow: none;
     right: 0;
     left: auto;
-    width: 220px
 }
 .navbar-nav .open .dropdown-menu.msg_list {
     width: 300px
