--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1514,7 +1514,7 @@ td.details {
 }
 
 #showdetail .page-nav{
-    font-weight: normal;
+    font-weight: 700;
     padding: 0 10px 10px;
     font-size: 16px;
     border-bottom: 2px solid #E6E9ED;
@@ -4392,7 +4392,7 @@ p.deadline span {
     width: 120px!important;
 }
 
-#viewdetail_apply .page-nav,#viewdetail_import .page-nav,#viewdetail_review .page-nav,#viewdetail_reviewer .page-nav,#importModal .page-nav,#viewdetail_audit .page-nav,#myModalLabel .page-nav{
+#viewdetail_apply .page-nav,#viewdetail_import .page-nav,#viewdetail_review .page-nav,#viewdetail_reviewer .page-nav,#importModal .page-nav,#viewdetail_audit .page-nav,#myModalLabel .page-nav,.myModalLabel .page-nav,.header .page-nav{
     font-weight: 600;
     padding: 0 10px 10px;
     font-size: 16px;
@@ -4400,18 +4400,18 @@ p.deadline span {
     line-height: 1em;
     margin-right: 20px;
 }
-#viewdetail_apply .page-nav .current-page,#viewdetail_import .page-nav .current-page,#viewdetail_review .page-nav .current-page,#viewdetail_reviewer .page-nav .current-page,#importModal .page-nav .current-page,#viewdetail_audit .page-nav .current-page,#myModalLabel .page-nav .current-page{
+#viewdetail_apply .page-nav .current-page,#viewdetail_import .page-nav .current-page,#viewdetail_review .page-nav .current-page,#viewdetail_reviewer .page-nav .current-page,#importModal .page-nav .current-page,#viewdetail_audit .page-nav .current-page,#myModalLabel .page-nav .current-page,.myModalLabel .page-nav .current-page,.header .page-nav .current-page{
     font-weight: 500;
     font-size: 14px;
 }
-#viewdetail_apply .project,#viewdetail_audit .project,#viewdetail_import .project,#myModalLabel .project,#viewdetail_review .project,#viewdetail_reviewer .project{
+#viewdetail_apply .project,#viewdetail_audit .project,#viewdetail_import .project,#myModalLabel .project,.myModalLabel .project,#viewdetail_review .project,#viewdetail_reviewer .project{
     padding: 10px 10px 0;
 }
-#viewdetail_apply .itemName,#viewdetail_import .itemName,#viewdetail_audit .itemName,#myModalLabel .itemName,#viewdetail_review .itemName,#viewdetail_reviewer .itemName{
+#viewdetail_apply .itemName,#viewdetail_import .itemName,#viewdetail_audit .itemName,#myModalLabel .itemName,.myModalLabel .itemName,#viewdetail_review .itemName,#viewdetail_reviewer .itemName{
     font-size: 20px;
     font-weight: 700;
 }
-#viewdetail_apply .message,#viewdetail_import .message,#myModalLabel .message,#viewdetail_audit .message,#viewdetail_review .message,#viewdetail_reviewer .message{
+#viewdetail_apply .message,#viewdetail_import .message,#myModalLabel .message,.myModalLabel .message,.header .message,#viewdetail_audit .message,#viewdetail_review .message,#viewdetail_reviewer .message{
     padding-left: 10px;
     padding-top: 5px;
     font-weight: 600;
