--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -3592,92 +3592,6 @@ form:after {
     clear: both;
     visibility: hidden
 }
-/*login*/
-
-/*.login_content {
-    margin: 0 auto;
-    padding: 25px 0 0;
-    position: relative;
-    text-align: center;
-    text-shadow: 0 1px 0 #fff;
-    min-width: 280px
-}
-.login_content a,
-.login_content .btn-default:hover {
-    text-decoration: none
-}
-.login_content a:hover {
-    text-decoration: underline
-}
-.login_content h1 {
-    font: normal 25px Helvetica, Arial, sans-serif;
-    letter-spacing: -0.05em;
-    line-height: 20px;
-    margin: 10px 0 30px
-}
-.login_content h1:before,
-.login_content h1:after {
-    content: "";
-    height: 1px;
-    position: absolute;
-    top: 10px;
-    width: 27%
-}
-.login_content h1:after {
-    background: #7e7e7e;
-    background: linear-gradient(left, #7e7e7e 0%, #fff 100%);
-    right: 0
-}
-.login_content h1:before {
-    background: #7e7e7e;
-    background: linear-gradient(right, #7e7e7e 0%, #fff 100%);
-    left: 0
-}
-.login_content h1:before,
-.login_content h1:after {
-    content: "";
-    height: 1px;
-    position: absolute;
-    top: 10px;
-    width: 20%
-}
-.login_content h1:after {
-    background: #7e7e7e;
-    background: linear-gradient(left, #7e7e7e 0%, #fff 100%);
-    right: 0
-}
-.login_content h1:before {
-    background: #7e7e7e;
-    background: linear-gradient(right, #7e7e7e 0%, #fff 100%);
-    left: 0
-}
-.login_content form {
-    margin: 20px 0;
-    position: relative
-}
-.login_content form input[type="text"],
-.login_content form input[type="email"],
-.login_content form input[type="password"] {
-    border-radius: 3px;
-    -ms-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
-    -o-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
-    box-shadow: 0 1px 0 #fff, 0 -2px 5px rgba(0, 0, 0, 0.08) inset;
-    border: 1px solid #c8c8c8;
-    color: #777;
-    margin: 0 0 20px;
-    width: 100%
-}
-.login_content form input[type="text"]:focus,
-.login_content form input[type="email"]:focus,
-.login_content form input[type="password"]:focus {
-    -ms-box-shadow: 0 0 2px #ed1c24 inset;
-    -o-box-shadow: 0 0 2px #ed1c24 inset;
-    box-shadow: 0 0 2px #A97AAD inset;
-    background-color: #fff;
-    border: 1px solid #A878AF;
-    outline: none
-}*/
-
 #username {
     background-position: 10px 10px !important
 }
@@ -3818,315 +3732,6 @@ fieldset {
     margin: 0;
     padding: 0
 }
-/*cropper*/
-
-/*.cropper .img-container,
-.cropper .img-preview {
-    background-color: #f7f7f7;
-    width: 100%;
-    text-align: center
-}
-.cropper .img-container {
-    min-height: 200px;
-    max-height: 516px;
-    margin-bottom: 20px
-}
-@media (min-width: 768px) {
-    .cropper .img-container {
-        min-height: 516px
-    }
-}
-.cropper .img-container>img {
-    max-width: 100%
-}
-.cropper .docs-preview {
-    margin-right: -15px
-}
-.cropper .img-preview {
-    float: left;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    overflow: hidden
-}
-.cropper .img-preview>img {
-    max-width: 100%
-}
-.cropper .preview-lg {
-    width: 263px;
-    height: 148px
-}
-.cropper .preview-md {
-    width: 139px;
-    height: 78px
-}
-.cropper .preview-sm {
-    width: 69px;
-    height: 39px
-}
-.cropper .preview-xs {
-    width: 35px;
-    height: 20px;
-    margin-right: 0
-}
-.cropper .docs-data>.input-group {
-    margin-bottom: 10px
-}
-.cropper .docs-data>.input-group>label {
-    min-width: 80px
-}
-.cropper .docs-data>.input-group>span {
-    min-width: 50px
-}
-.cropper .docs-buttons>.btn,
-.cropper .docs-buttons>.btn-group,
-.cropper .docs-buttons>.form-control {
-    margin-right: 5px;
-    margin-bottom: 10px
-}
-.cropper .docs-toggles>.btn,
-.cropper .docs-toggles>.btn-group,
-.cropper .docs-toggles>.dropdown {
-    margin-bottom: 10px
-}
-.cropper .docs-tooltip {
-    display: block;
-    margin: -6px -12px;
-    padding: 6px 12px
-}
-.cropper .docs-tooltip>.icon {
-    margin: 0 -3px;
-    vertical-align: top
-}
-.cropper .tooltip-inner {
-    white-space: normal
-}
-.cropper .btn-upload .tooltip-inner,
-.cropper .btn-toggle .tooltip-inner {
-    white-space: nowrap
-}
-.cropper .btn-toggle {
-    padding: 6px
-}
-.cropper .btn-toggle>.docs-tooltip {
-    margin: -6px;
-    padding: 6px
-}
-@media (max-width: 400px) {
-    .cropper .btn-group-crop {
-        margin-right: -15px !important
-    }
-    .cropper .btn-group-crop>.btn {
-        padding-left: 5px;
-        padding-right: 5px
-    }
-    .cropper .btn-group-crop .docs-tooltip {
-        margin-left: -5px;
-        margin-right: -5px;
-        padding-left: 5px;
-        padding-right: 5px
-    }
-}
-.cropper .docs-options .dropdown-menu {
-    width: 100%
-}
-.cropper .docs-options .dropdown-menu>li {
-    padding: 3px 20px
-}
-.cropper .docs-options .dropdown-menu>li:hover {
-    background-color: #f7f7f7
-}
-.cropper .docs-options .dropdown-menu>li>label {
-    display: block
-}
-.cropper .docs-cropped .modal-body {
-    text-align: center
-}
-.cropper .docs-cropped .modal-body>img,
-.cropper .docs-cropped .modal-body>canvas {
-    max-width: 100%
-}
-.cropper .docs-diagram .modal-dialog {
-    max-width: 352px
-}
-.cropper .docs-cropped canvas {
-    max-width: 100%
-}*/
-
-/*form-wizrad*/
-/*.form_wizard .stepContainer {
-    display: block;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    border: 0 solid #CCC;
-    overflow-x: hidden
-}
-.wizard_horizontal ul.wizard_steps {
-    display: table;
-    list-style: none;
-    position: relative;
-    width: 100%;
-    margin: 0 0 20px
-}
-.wizard_horizontal ul.wizard_steps li {
-    display: table-cell;
-    text-align: center
-}
-.wizard_horizontal ul.wizard_steps li a,
-.wizard_horizontal ul.wizard_steps li:hover {
-    display: block;
-    position: relative;
-    -moz-opacity: 1;
-    filter: alpha(opacity=100);
-    opacity: 1;
-    color: #666
-}
-.wizard_horizontal ul.wizard_steps li a:before {
-    content: "";
-    position: absolute;
-    height: 4px;
-    background: #ccc;
-    top: 20px;
-    width: 100%;
-    z-index: 4;
-    left: 0
-}
-.wizard_horizontal ul.wizard_steps li a.disabled .step_no {
-    background: #ccc
-}
-.wizard_horizontal ul.wizard_steps li a .step_no {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    border-radius: 100px;
-    display: block;
-    margin: 0 auto 5px;
-    font-size: 16px;
-    text-align: center;
-    position: relative;
-    z-index: 5
-}
-.wizard_horizontal ul.wizard_steps li a.selected:before,
-.step_no {
-    background: #34495E;
-    color: #fff
-}
-.wizard_horizontal ul.wizard_steps li a.done:before,
-.wizard_horizontal ul.wizard_steps li a.done .step_no {
-    background: #1ABB9C;
-    color: #fff
-}
-.wizard_horizontal ul.wizard_steps li:first-child a:before {
-    left: 50%
-}
-.wizard_horizontal ul.wizard_steps li:last-child a:before {
-    right: 50%;
-    width: 50%;
-    left: auto
-}
-.wizard_verticle .stepContainer {
-    width: 80%;
-    float: left;
-    padding: 0 10px
-}
-.actionBar {
-    width: 100%;
-    border-top: 1px solid #ddd;
-    padding: 10px 5px;
-    text-align: right;
-    margin-top: 10px
-}
-.actionBar .buttonDisabled {
-    cursor: not-allowed;
-    pointer-events: none;
-    opacity: .65;
-    filter: alpha(opacity=65);
-    box-shadow: none
-}
-.actionBar a {
-    margin: 0 3px
-}
-.wizard_verticle .wizard_content {
-    width: 80%;
-    float: left;
-    padding-left: 20px
-}
-.wizard_verticle ul.wizard_steps {
-    display: table;
-    list-style: none;
-    position: relative;
-    width: 20%;
-    float: left;
-    margin: 0 0 20px
-}
-.wizard_verticle ul.wizard_steps li {
-    display: list-item;
-    text-align: center
-}
-.wizard_verticle ul.wizard_steps li a {
-    height: 80px
-}
-.wizard_verticle ul.wizard_steps li a:first-child {
-    margin-top: 20px
-}
-.wizard_verticle ul.wizard_steps li a,
-.wizard_verticle ul.wizard_steps li:hover {
-    display: block;
-    position: relative;
-    -moz-opacity: 1;
-    filter: alpha(opacity=100);
-    opacity: 1;
-    color: #666
-}
-.wizard_verticle ul.wizard_steps li a:before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    background: #ccc;
-    top: 20px;
-    width: 4px;
-    z-index: 4;
-    left: 49%
-}
-.wizard_verticle ul.wizard_steps li a.disabled .step_no {
-    background: #ccc
-}
-.wizard_verticle ul.wizard_steps li a .step_no {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    border-radius: 100px;
-    display: block;
-    margin: 0 auto 5px;
-    font-size: 16px;
-    text-align: center;
-    position: relative;
-    z-index: 5
-}
-.wizard_verticle ul.wizard_steps li a.selected:before,
-.step_no {
-    background: #34495E;
-    color: #fff
-}
-.wizard_verticle ul.wizard_steps li a.done:before,
-.wizard_verticle ul.wizard_steps li a.done .step_no {
-    background: #1ABB9C;
-    color: #fff
-}
-.wizard_verticle ul.wizard_steps li:first-child a:before {
-    left: 49%
-}
-.wizard_verticle ul.wizard_steps li:last-child a:before {
-    left: 49%;
-    left: auto;
-    width: 0
-}
-.form_wizard .loader {
-    display: none
-}
-.form_wizard .msgBox {
-    display: none
-}*/
 .progress {
     border-radius: 0
 }
@@ -4285,12 +3890,6 @@ ul.notifications {
     border: 1px solid #e5e5e5
 }
 
-/*
-.x_content {
-    direction: rtl;
-}
-*/
-
 .main_menu .label {
     line-height: 11px;
     margin-top: 4px;
@@ -4309,64 +3908,6 @@ ul.notifications {
 @media (max-width: 767px) {
    .dataTables_length { float:none; }
 }
-
-
-
-
-/* CSS3 Checkbox */
-/*
-.checkbox-input { display:block;position:relative; }
-.checkbox-input:before { display:block;content:"";position:absolute;top:2px;left:0;height:20px;width:20px;background:red;border-radius:3px; }
-
-
- #input + label:after {
-    content: 'click my input';
-    color: blue;
-  }
-
-  #input:focus + label:after {
-    content: 'not valid yet';
-    color: blue;
-  }
-
-  #input:valid + label:after {
-    content: 'looks good';
-    color: red;
-  }
-
-/* CSS3 Checkbox - end */
-/*
-
-/*
-.checkbox 																										{ display: block;position:relative;cursor:pointer; }
-.checkbox input 																								{ position:absolute;z-index:-1;opacity:0;left:0;top:0; }
-.checkbox div 																									{ position:absolute;top:2px;left:0;height:20px;width:20px;background:#e6e6e6;border-radius:3px; }
-.checkbox input:checked ~ div 																			{ background: #1ABC9C; }
-.checkbox:hover input:not([disabled]):checked ~ div,
-.checkbox input:checked:focus ~ div 																	{ background: #1ABC9C; }
-.checkbox input:disabled ~ div 																			{ background: #1ABC9C;opacity: 0.6;pointer-events: none; }
-.checkbox div:after 																							{ content: '';position: absolute;display: none; }
-.checkbox input:checked ~ div:after 																	{ display: block; }
-.checkbox-wp div:after 																					{ left: 7px;top: 3px;width: 7px;height: 11px;border: solid #fff;border-width: 0 2px 2px 0;transform: rotate(40deg); }
-.checkbox-wp input:disabled ~ div:after 																{ border-color: #F2F2F2; }
-
-
-.checkbox-radio div 																							{ border-radius: 50%; }
-.checkbox-radio div:after 																					{ left: 7px;top: 7px;height: 6px;width: 6px;border-radius: 50%;background: #fff; }
-.checkbox-radio input:disabled ~ div:after 															{ background: #F2F2F2; }
-
-
-.checkbox, .radio { margin-top:-3px; }
-
-table thead .checkbox { margin-top:-7px;margin-top:-21px; }
-table thead .checkbox.radio { margin-top:-7px;margin-top:-21px; }
-*/
-			
-/*.daterangepicker.xdisplay { width:228px; }
-
-.dataTables_wrapper > .row{
-  overflow:auto !important; !*prevent datatables overflowing its container*!
-}*/
 
 /*  Author:cxl  */
 .form-horizontal .form-group .team-member{
@@ -4432,7 +3973,12 @@ p.deadline span {
     padding-left: 41px!important;
 }
 .operation-btn-three{
-    width: 200px;
+     width: 200px;
+     text-align: left!important;
+     padding-left: 10px!important;
+ }
+.operation-btn-four{
+    width: 253px;
     text-align: left!important;
     padding-left: 10px!important;
 }
